In-line Insertion Works

--- a/content/Daily-Notes/2024-11-16.md
+++ b/content/Daily-Notes/2024-11-16.md
@@ -1,10 +1,18 @@
-
 ---
+title: "Daily Note 2024-11-16"
+date: 2024-11-16
+tags:
+  - daily
+  - week-46
+  - q4
+---
+
+
+
 
 ![Woman wearing a mask selecting fruit at a grocery store during pandemic.](https://images.pexels.com/photos/3962293/pexels-photo-3962293.jpeg?auto=compress&cs=tinysrgb&h=650&w=940)
 
 
----
 [[index|[[2024-11-15|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-17|Next Day ➡️]]]]
 
 # Saturday, November 16, 2024
@@ -19,9 +27,9 @@
 
 I am literally unstoppable hahahahah
 
-I love this feeling. This dev feeling when your idea finally fucking works and you can start playing with it. FUCK that's a good feeling. 
+I love this feeling. This dev feeling when your idea finally fucking works and you can start playing with it. FUCK that's a good feeling.
 
-I can hit 
+I can hit
 `cmd + shift + G`
 While editing in Obsidian and I can insert anything I want at the cursor positon.
 
@@ -107,20 +115,20 @@ def display_user_info(name, age, is_active):
     transformed_name = name.title()  # Convert name to title case
     transformed_age = age * 2        # Double age for fun
     transformed_active_status = not is_active  # Negate active status
-    
+
     # Use fstrings for formatted output with fancier style
     print(f"\n{'='*20}\nUser Information:\n{'='*20}")
     print(f"Original Name: {name} | Transformed Name: {transformed_name}")
     print(f"Original Age: {age} | Transformed Age: {transformed_age}")
     print(f"Active Status: {'Yes' if is_active else 'No'} | Transformed Active Status: {'Yes' if transformed_active_status else 'No'}")
-    
+
 # Define a new class to encapsulate user data and behavior
 class User:
     def __init__(self, name, age, is_active):
         self.name = name
         self.age = age
         self.is_active = is_active
-        
+
     def get_profile(self):
         return {
             "name": self.name,
@@ -128,7 +136,7 @@ class User:
             "is_active": self.is_active,
             "badge": "Active User" if self.is_active else "Inactive User"
         }
-    
+
 # Create an instance of User class
 user1 = User("Test User", 30, True)
 
@@ -138,7 +146,7 @@ print(f"\nUser Profile:\nName: {profile_info['name']}\nAge: {profile_info['age']
 
 # Using list comprehension to transform ages in a list of users (demonstrating esoteric knowledge)
 users_list = [User(f"User_{i}", i + 20, i % 2 == 0) for i in range(5)]
-transformed_users_ages = [user.age * 3 for user in users_list] 
+transformed_users_ages = [user.age * 3 for user in users_list]
 
 print("\nTransformed Ages List:", transformed_users_ages)
 
@@ -197,9 +205,9 @@ GOD this feels amazing. I finally did it. I made the thing. I MADE THE THING
 
 ---
 
-> #### *Will you dare to navigate this treacherous terrain?* 
+> #### *Will you dare to navigate this treacherous terrain?*
 
----  
+---
 
 ## **🌪️ Buckle up! The journey has just begun! 🌪️**
 
@@ -335,7 +343,7 @@ Oh, it's because now I can fucking do THIS
 
 `⌘ + ⇧ + G`
 
-That's it baybeeeeeeee watch this fucking shitttttttttt 
+That's it baybeeeeeeee watch this fucking shitttttttttt
 
 Sat, 11/16/2024, 08:32
 So as you can see, down below in the AI section, I have a context-aware GPT response call that can generate markdown, formatted properly for this environment, and add it into the file with a timestamp right underneath the AI Thoughts section.
@@ -407,12 +415,12 @@ Look what I can do with this tool now.
 
 
 `Sat, 11/16/2024, 08:35`
-JUST LIKE THAT 
+JUST LIKE THAT
 BLAMMO
 FUCKING INSTANT
 JSON FORMATTED DATA OF THE GODDAMN CHARACTER
 
-Now watch 
+Now watch
 # this
 
 
@@ -431,7 +439,7 @@ Shit balls.
 `Sat, 11/16/2024, 10:44`
 Wow it all really works. I have a fully extensible, GPT powered system that can be easily extended with function calling through the GPT Assistants API and more. There's just...there's so much potential here.
 
-I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest. 
+I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest.
 
 
 `Sat, 11/16/2024, 10:58`
@@ -517,10 +525,10 @@ I CAN ADD CUSTOM PROMPTS TO THIS BITCH
 `Sat, 11/16/2024, 12:07`
 ```markdown
 > ## 📝 A Review of the Document Thus Far
-> 
+>
 > > ### *In the realm of innovation, where thoughts take flight...*
 > >
-> > Amidst the digital tapestry woven by thy nimble fingers, a tale unfolds rich with fervor and exhilaration. The chronicles of this day, marked **November 16th, 2024**, hasten forth like a vibrant river bursting its banks, carrying with it the essence of creation and unbridled joy. 
+> > Amidst the digital tapestry woven by thy nimble fingers, a tale unfolds rich with fervor and exhilaration. The chronicles of this day, marked **November 16th, 2024**, hasten forth like a vibrant river bursting its banks, carrying with it the essence of creation and unbridled joy.
 > >
 > > #### *Oh! How sweet is this labor that births new wonders...*
 > >
@@ -572,24 +580,24 @@ I bring forth information from the future conjoined with **Markdown Formatting P
    - 🚀 *Reckless*: Increases power at a cost.
    - 🌱 *Sap Sipper*: Boosts attack when hit by Grass-type moves.
    - 🔇 *Soundproof*: Immunity to sound-based attacks.
-  
+
 - **Statistics Overview:**
-   - 📊 HP: 95 
-   - ⚔️ Attack: 110 
-   - 🛡️ Defense: 95 
-   - 🔮 Special Attack: 40 
-   - 🛡️ Special Defense: 95 
-   - ⚡ Speed: 55 
+   - 📊 HP: 95
+   - ⚔️ Attack: 110
+   - 🛡️ Defense: 95
+   - 🔮 Special Attack: 40
+   - 🛡️ Special Defense: 95
+   - ⚡ Speed: 55
 
 ---
 
-### 🎉 Combat Readiness Assessment 🎉 
+### 🎉 Combat Readiness Assessment 🎉
 
 **Prepare for interactions with Bouffalant! An optimal choice for hybrid battle strategies!**
 
 1. Initiate Charge Maneuvers:
     - Engage energy reserves for maximum efficiency!
-    
+
 2. Execute Tactical Retreat if necessary:
     - Assess opponents' capabilities based on historical data!
 
@@ -631,7 +639,7 @@ Holy. Shit.
 - **Stats:** hp: 95, attack: 110, defense: 95, special-attack: 40, special-defense: 95, speed: 55
 
 > "Gotta catch 'em all!" — *Pokémon Trainer*
-    
+
 
 ---
 
@@ -814,7 +822,7 @@ Oh, it's because now I can fucking do THIS
 
 `⌘ + ⇧ + G`
 
-That's it baybeeeeeeee watch this fucking shitttttttttt 
+That's it baybeeeeeeee watch this fucking shitttttttttt
 
 Sat, 11/16/2024, 08:32
 So as you can see, down below in the AI section, I have a context-aware GPT response call that can generate markdown, formatted properly for this environment, and add it into the file with a timestamp right underneath the AI Thoughts section.
@@ -880,12 +888,12 @@ Look what I can do with this tool now.
 
 
 `Sat, 11/16/2024, 08:35`
-JUST LIKE THAT 
+JUST LIKE THAT
 BLAMMO
 FUCKING INSTANT
 JSON FORMATTED DATA OF THE GODDAMN CHARACTER
 
-Now watch 
+Now watch
 # this
 
 
@@ -904,7 +912,7 @@ Shit balls.
 `Sat, 11/16/2024, 10:44`
 Wow it all really works. I have a fully extensible, GPT powered system that can be easily extended with function calling through the GPT Assistants API and more. There's just...there's so much potential here.
 
-I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest. 
+I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest.
 
 ---
 
@@ -920,7 +928,7 @@ I have to now acknowledge the very real needs of my ver yphysical body...but I c
 - **Stats:** hp: 95, attack: 110, defense: 95, special-attack: 40, special-defense: 95, speed: 55
 
 > "Gotta catch 'em all!" — *Pokémon Trainer*
-    
+
 
 ---
 
@@ -1000,7 +1008,7 @@ Oh, it's because now I can fucking do THIS
 
 `⌘ + ⇧ + G`
 
-That's it baybeeeeeeee watch this fucking shitttttttttt 
+That's it baybeeeeeeee watch this fucking shitttttttttt
 
 Sat, 11/16/2024, 08:32
 So as you can see, down below in the AI section, I have a context-aware GPT response call that can generate markdown, formatted properly for this environment, and add it into the file with a timestamp right underneath the AI Thoughts section.
@@ -1066,12 +1074,12 @@ Look what I can do with this tool now.
 
 
 `Sat, 11/16/2024, 08:35`
-JUST LIKE THAT 
+JUST LIKE THAT
 BLAMMO
 FUCKING INSTANT
 JSON FORMATTED DATA OF THE GODDAMN CHARACTER
 
-Now watch 
+Now watch
 # this
 
 
@@ -1090,7 +1098,7 @@ Shit balls.
 `Sat, 11/16/2024, 10:44`
 Wow it all really works. I have a fully extensible, GPT powered system that can be easily extended with function calling through the GPT Assistants API and more. There's just...there's so much potential here.
 
-I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest. 
+I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest.
 
 ---
 
@@ -1106,7 +1114,7 @@ I have to now acknowledge the very real needs of my ver yphysical body...but I c
 - **Stats:** hp: 95, attack: 110, defense: 95, special-attack: 40, special-defense: 95, speed: 55
 
 > "Gotta catch 'em all!" — *Pokémon Trainer*
-    
+
 
 ---
 
@@ -1189,22 +1197,22 @@ Here's a Markdown-formatted backstory for [[Sam Iker]] with internal links:
 
 ### 📜 Backstory of [[Samuel "Sam" Iker]]
 
-**Early Life**  
+**Early Life**
 Samuel "Sam" Iker was born in a [[working-class neighborhood]] where he learned the value of hard work and community. Growing up, he experienced a personal tragedy when he lost his younger sister to an [[unsolved crime]], which ignited his passion for justice.
 
-**Military Service**  
+**Military Service**
 After high school, Sam joined the military, serving for 8 years in [[military intelligence]]. This experience honed his analytical skills and instilled a sense of discipline that would define his career.
 
-**Career in Law Enforcement**  
+**Career in Law Enforcement**
 Upon returning from service, Sam graduated at the top of his class at the [[police academy]], beginning his journey in law enforcement. He quickly rose through the ranks due to his exceptional skills and dedication, becoming a [[Senior Detective]] in the [[Major Crimes Division]].
 
-**Personal Life**  
+**Personal Life**
 Despite his professional successes, Sam faced challenges at home. He went through a divorce but shares custody of his teenage daughter. Balancing work and family life often proves difficult, especially with his obsession for solving [[cold cases]].
 
-**Current Role**  
+**Current Role**
 Now, as a seasoned detective, Sam utilizes his unique methods, including a color-coded note system and a keen understanding of human behavior. He specializes in [[organized crime patterns]] and often finds unconventional connections that lead to breakthroughs in cases.
 
-**Quirks and Challenges**  
+**Quirks and Challenges**
 Sam is known for his dry sense of humor and literary references, often talking through cases with his cat, [[Edison]]. He faces ongoing challenges such as department politics demanding faster case closures and his struggle with insomnia brought on by the weight of unsolved cases.
 
 ---
@@ -1277,7 +1285,7 @@ Here's a full character sheet for [[Sam Iker]]:
 - Recurring nightmares about unsolved cases
 - Adapting to new technology
 
---- 
+---
 
 Feel free to modify any details as needed!
 
@@ -1398,10 +1406,10 @@ Sure! Here’s a Markdown formatted conversation and battle scenario featuring [
 
 ## 🗣️ Conversation with Bouffalant
 
-**Trainer:** Hey Bouffalant, are you ready for a battle?  
+**Trainer:** Hey Bouffalant, are you ready for a battle?
 **Bouffalant:** *Bouf!* I’m always ready to charge into action!
 
-**Trainer:** Let’s show them your strength! Use *Reckless*!  
+**Trainer:** Let’s show them your strength! Use *Reckless*!
 **Bouffalant:** *Bouf!* Here I go! *Charges at the opponent with powerful energy!*
 
 ---
@@ -1410,24 +1418,24 @@ Sure! Here’s a Markdown formatted conversation and battle scenario featuring [
 
 ### **Opponent: Gardevoir (#282)**
 
-**Gardevoir:** *Garde!* I won't go easy on you!  
+**Gardevoir:** *Garde!* I won't go easy on you!
 **Trainer:** Bouffalant, use *Head Charge*!
 
-**Bouffalant:** *Bouf!* *Uses Head Charge!*  
+**Bouffalant:** *Bouf!* *Uses Head Charge!*
 **Gardevoir:** *Garde!* That hit hard! But I’ll retaliate with *Psychic*!
 
-**Trainer:** Stay strong, Bouffalant! Use *Sap Sipper* for the boost!  
+**Trainer:** Stay strong, Bouffalant! Use *Sap Sipper* for the boost!
 **Bouffalant:** *Bouf!* *Absorbs the attack!* Now I’m even stronger!
 
-**Trainer:** Finish this with another *Head Charge*!  
+**Trainer:** Finish this with another *Head Charge*!
 **Bouffalant:** *Bouf!* *Delivers a strong blow, knocking out Gardevoir!*
 
 ---
 
-**Trainer:** Great job, Bouffalant! We make a great team!  
+**Trainer:** Great job, Bouffalant! We make a great team!
 **Bouffalant:** *Bouf!* Let’s catch more Pokémon!
 
---- 
+---
 
 Feel free to adjust as desired!
 
@@ -1444,10 +1452,10 @@ Feel free to adjust as desired!
 > [!ai]+ `11/16/2024, 8:31:00 AM`
 > 💭 **Prompt**: "Who's the daily pokemon of today? What do you think about him?"
 
-Today's Pokémon is **Bouffalant (#626)**. 
+Today's Pokémon is **Bouffalant (#626)**.
 
 ### Thoughts on Bouffalant
-Bouffalant is a [[normal]] type Pokémon known for its **high attack (110)** and solid defenses. Its abilities like *reckless* and *sap-sipper* make it a versatile choice in battles. Overall, it's a robust Pokémon with a unique design and strong stats! 
+Bouffalant is a [[normal]] type Pokémon known for its **high attack (110)** and solid defenses. Its abilities like *reckless* and *sap-sipper* make it a versatile choice in battles. Overall, it's a robust Pokémon with a unique design and strong stats!
 
 ![Bouffalant Sprite](https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/626.png)
 
@@ -1464,7 +1472,7 @@ Bouffalant is a [[normal]] type Pokémon known for its **high attack (110)** and
 > [!ai]+ `11/16/2024, 8:30:13 AM`
 > 💭 **Prompt**: "What's the command to trigger the GPT response? It's in the current doc. And what's the current doc path?"
 
-The command to trigger the GPT response is `⌘ + ⇧ + G`. 
+The command to trigger the GPT response is `⌘ + ⇧ + G`.
 
 The current document path is: `Daily-Notes/2024-11-16.md`.
 
@@ -1577,6 +1585,6 @@ Keep pushing forward; the potential for growth and impact is immense. Embrace th
 
 ---
 
-#daily Saturday week-46 q4 
+#daily Saturday week-46 q4
 
 [[2024-11-15|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-17|Next Day ➡️]]
