In-line Insertion Works

--- a/content/Daily-Notes/2024-11-16.md
+++ b/content/Daily-Notes/2024-11-16.md
@@ -13,7 +13,7 @@ tags:
 ![Woman wearing a mask selecting fruit at a grocery store during pandemic.](https://images.pexels.com/photos/3962293/pexels-photo-3962293.jpeg?auto=compress&cs=tinysrgb&h=650&w=940)
 
 
-[[index|[[2024-11-15|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-17|Next Day ➡️]]]]
+[[2024-11-15|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-17|Next Day ➡️]]]]
 
 # Saturday, November 16, 2024
 > Week 46 of 2024 • Q4
