First Built Page

--- a/content/Daily-Notes/2024-11-16.md
+++ b/content/Daily-Notes/2024-11-16.md
@@ -641,6 +641,14 @@ Holy. Shit.
 > "Gotta catch 'em all!" — *Pokémon Trainer*
 
 
+`Sat, 11/16/2024, 12:32`
+This document is a goddamn mess. I don't care. I'm gonna keep adding to it. You know why?
+
+## Now the real research starts
+
+First off, let's get me a mailing address:
+[[Butte County Social Services]]
+
 ---
 
 ## 🤖 GPT Thoughts
