--- a/content/Daily-Notes/2024-11-16.md
+++ b/content/Daily-Notes/2024-11-16.md
@@ -7,7 +7,7 @@ tags:
   - q4
 ---
 
-
+{{< iframe src="https://www.scrapethissite.com/pages/" >}}
 
 
 ![Woman wearing a mask selecting fruit at a grocery store during pandemic.](https://images.pexels.com/photos/3962293/pexels-photo-3962293.jpeg?auto=compress&cs=tinysrgb&h=650&w=940)
@@ -29,6 +29,28 @@ tags:
 
 `Sat, 11/16/2024, 13:30`
 The document captures a day in the life of a productivity-focused individual on November 16, 2024. It outlines the progress made towards achieving goals, notably the creation of a powerful content tool facilitated by a custom Obsidian plugin that integrates GPT responses for enhanced note-taking and idea generation. The day is marked by excitement over newfound capabilities that allow for seamless integration of thoughts, research on social services, reflections on personal achievements, and the introduction of Pokémon character details, specifically focusing on Bouffalant. Overall, it emphasizes empowerment through technology and creativity while navigating personal and professional challenges.
+
+`Sat, 11/16/2024, 15:24`
+Ok, well
+This thingymabob represents the first real opportunity I've had to have a genuine chanceat creating something durable, future-proof, scalable and AI first.
+The AI part of this is that this site is very easily scrapable with [[Selenium]] by simply clicking the button and taking the content from any page at all.
+There should probably be some kind of security on this to prevent abuse, but while my site is small and I'm not making any money, I'm probably fine lol.
+
+Let's add a donation link to my KoFi so that I can be sure not to miss any monetization opportunities, and once that's done, then...well...that's a wrap!
+
+Every other thing I do moving forward will be focused on growing [novasystem.io](https://novasystem.io)
+
+That site is the AI component I've been working toward for 2 years now.
+
+Finally [[WinfoNova]] is possible, and I couldn't be happier
+
+
+`Sat, 11/16/2024, 15:31`
+I just generated a whole character sheet for my app WinfoNova with a few clicks in a fraction of a second.
+
+This shit is POWER FUL and only needs a realtime internet connection to become a fucking BEAST (wow this shit is powerful)
+
+
 
 ## ✅ Steps to Apply for Social Services (Food Stamps)
 
@@ -742,303 +764,6 @@ Holy. Shit.
 > "Gotta catch 'em all!" — *Pokémon Trainer*
 
 
-`Sat, 11/16/2024, 12:32`
-This document is a goddamn mess. I don't care. I'm gonna keep adding to it. You know why?
-
-## Now the real research starts
-
-First off, let's get me a mailing address:
-[[Butte County Social Services]]
-
----
-
-## 🤖 GPT Thoughts
-
-
-> [!ai]+ `11/16/2024, 12:02:41 PM`
-> 💭 **Prompt**: "add a to-do list"
-
-## ✅ To-Do List
-
-- [ ] ☀️ Morning Review
-- [ ] 📈 Check Analytics
-- [ ] 🤝 Community Engagement
-- [ ] 🌙 EOD Reflection
-
-### **Content Pipeline**
-- [[Content Calendar|📅 Schedule]]
-- [[Video Ideas|🎥 Ideas]]
-- [[TikTok Scripts|📝 TikTok]]
-- [[YouTube Scripts|🎬 YouTube]]
-
-### **Latest Analytics**
-- [[TikTok Stats|📊 TikTok]]
-- [[YouTube Stats|📈 YouTube]]
-- [[Instagram Stats|📸 Instagram]]
-
-### **Projects**
-- [[NovaSystem|🤖 Nova]]
-- [[Knowledge Garden|🌳 Garden]]
-- [[Multiverse School|🎓 Classes]]
-
-### **Connect with Me**
-- [Twitter](https://twitter.com/yourusername)
-- [GitHub](https://github.com/yourusername)
-- [Website](https://yourwebsite.com)
-
-```
-📊 Token Usage:
-• Prompt: 11719
-• Completion: 195
-• Total: 11914
-User Input:
-• add a to-do list
-```
----
-
-
-
-> [!ai]+ `11/16/2024, 12:02:24 PM`
-> 💭 **Prompt**: "Give me a markdown tasklist of all the stuff that's in here"
-
-## ✅ Task List
-
-- [ ] ☀️ Morning Review
-- [ ] 📈 Check Analytics
-- [ ] 🤝 Community Engagement
-- [ ] 🌙 EOD Reflection
-
-### **Content Pipeline**
-- [[Content Calendar|📅 Schedule]]
-- [[Video Ideas|🎥 Ideas]]
-- [[TikTok Scripts|📝 TikTok]]
-- [[YouTube Scripts|🎬 YouTube]]
-
-### **Latest Analytics**
-- [[TikTok Stats|📊 TikTok]]
-- [[YouTube Stats|📈 YouTube]]
-- [[Instagram Stats|📸 Instagram]]
-
-### **Projects**
-- [[NovaSystem|🤖 Nova]]
-- [[Knowledge Garden|🌳 Garden]]
-- [[Multiverse School|🎓 Classes]]
-
-### **Connect with Me**
-- [Twitter](https://twitter.com/yourusername)
-- [GitHub](https://github.com/yourusername)
-- [Website](https://yourwebsite.com)
-
-```
-📊 Token Usage:
-• Prompt: 11442
-• Completion: 193
-• Total: 11635
-User Input:
-• Give me a markdown tasklist of all the stuff that's in here
-```
----
-
-
-
-> [!ai]+ `11/16/2024, 12:00:07 PM`
-> 💭 **Prompt**: "What do you think? I can input random images and random GPT responses with context in whatever file I'm working in now"
-
-That's a fantastic advancement! Integrating random images and context-aware [[GPT]] responses directly into your files enhances your workflow and creativity. It streamlines content creation, allowing for more dynamic and engaging notes. Keep exploring this capability—it's a game changer!
-
-```
-📊 Token Usage:
-• Prompt: 11288
-• Completion: 50
-• Total: 11338
-Original Prompt:
-• Prompt: What do you think? I can input random images and random GPT responses with context in whatever file I'm working in now
-```
----
-
-
-
-> [!ai]+ `11/16/2024, 11:33:52 AM`
-> 💭 **Prompt**: "Whd do you think of the current file? I'm experimenting I built some custom JS that allows me to insert GPT thoughts anywhere in the file wherever my cursor is and they're context aware!!"
-
-That's an exciting development! Your custom JS for inserting context-aware [[GPT]] thoughts enhances your workflow significantly. This flexibility allows for seamless integration of ideas, making your content creation process more efficient and dynamic. Keep experimenting; it sounds like you’re on the brink of a powerful tool!
-
-```
-📊 Token Usage:
-• Prompt: 8707
-• Completion: 56
-• Total: 8763
-Original Prompt:
-• Prompt: Whd do you think of the current file? I'm experimenting I built some custom JS that allows me to insert GPT thoughts anywhere in the file wherever my cursor is and they're context aware!!
-```
----
-
-
-
-> [!ai]+ `11/16/2024, 10:55:59 AM`
-> 💭 **Prompt**: "Give me a breakdown of the number of 5 syllable words in this doc"
-
-### Breakdown of 5-Syllable Words in Document
-
-1. **Content Creation**
-2. **International**
-3. **Organization**
-4. **Communication**
-5. **Observational**
-
-Total: 5 five-syllable words found.
-
-```
-📊 Token Usage:
-• Prompt: 11014
-• Completion: 50
-• Total: 11064
-Original Prompt:
-• Prompt: You are an assistant helping with brief responses. Format your response using these Markdown rules:
-
-1. Use [[double brackets]] for key concepts and proper names
-2. Use **bold** sparingly for emphasis
-3. Keep responses concise and direct
-4. Use external links when relevant: [title](url)
-
-Current File: /Users/ctavolazzi/Code/quartz/content/Daily-Notes/2024-11-16.md
-Content:
-[[index|[[2024-11-15|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-17|Next Day ➡️]]]]
-
-# Saturday, November 16, 2024
-> Week 46 of 2024 • Q4
-
-## 📊 Day at a Glance
-- 🗓️ **Day:** 321 of 2024
-- 📅 **Week:** 46 of 52
-- 📊 **Quarter Progress:** 51%
-- 🎯 **Days until EOY:** 44
-- 🔄 **Created at:** 8:25 AM
-
----
-
-## 📝 Daily Reflections
-
-Sat, 11/16/2024, 08:26
-And just like that, through sheer force of will, I have created what I conceived over a year ago.
-ChatGPT can weigh in on the note I'm making AS I'M WRITING IT and provide links to other files, additional context, basically whatever I want.
-
-This is the beginning of the ultimate content tool. This is the start of [[Winfo]] !!! The Obsidian plugin I wanted to develop all those many moons ago.
-
-I've been developing for 5 hours. I'm sore. Why do I do this to myself?
-
-Oh, it's because now I can fucking do THIS
-
-`⌘ + ⇧ + G`
-
-That's it baybeeeeeeee watch this fucking shitttttttttt
-
-Sat, 11/16/2024, 08:32
-So as you can see, down below in the AI section, I have a context-aware GPT response call that can generate markdown, formatted properly for this environment, and add it into the file with a timestamp right underneath the AI Thoughts section.
-
-This is the thing I wanted to do - this is the moment I've been waiting for.
-
-As a journalist and a writer, do you have ANY IDEA how helpful this is going to be for me?
-
-Look what I can do with this tool now.
-
-# **Here look:**
-
-### Sam Iker - Detective Profile
-
-**Basic Information**
-- **Full Name**: Samuel "Sam" Iker
-- **Age**: 43
-- **Occupation**: Senior Detective, Major Crimes Division
-- **Years of Service**: 18
-
-**Physical Description**
-- Medium build, 5'11"
-- Salt-and-pepper hair, usually slightly disheveled
-- Dark brown eyes with noticeable crow's feet
-- Often wears wrinkled dress shirts with rolled-up sleeves
-- Carries a worn leather messenger bag full of case files
-
-**Background**
-- Born and raised in a working-class neighborhood
-- Former military intelligence officer (8 years service)
-- Lost his younger sister to an unsolved crime in his youth
-- Graduated top of his class at the police academy
-- Divorced, shares custody of teenage daughter
-
-**Personality Traits**
-- Highly observant with an almost photographic memory
-- Struggles with insomnia, often works late into the night
-- Known for solving cases through unconventional connections
-- Dry sense of humor, often makes subtle literary references
-- Tendency to become overly invested in cold cases
-
-**Skills & Methods**
-- Expert in pattern recognition and behavioral analysis
-- Skilled at reading body language and micro-expressions
-- Uses a unique system of color-coded notes and string boards
-- Fluent in Spanish and conversational in Mandarin
-- Specializes in cases involving organized crime patterns
-
-**Quirks**
-- Always carries a 1940s Parker fountain pen
-- Keeps detailed journals of every case
-- Never drinks coffee, only specific types of green tea
-- Has a habit of talking through cases with his cat, Edison
-- Collects vintage detective novels
-
-**Current Challenges**
-- Dealing with department politics pushing for faster case closures
-- Balancing work obsession with family responsibilities
-- Mentoring a new partner while maintaining his unorthodox methods
-- Recurring nightmares about unsolved cases
-- Adapting to new technology while preferring traditional methods
-
-
-
-`Sat, 11/16/2024, 08:35`
-JUST LIKE THAT
-BLAMMO
-FUCKING INSTANT
-JSON FORMATTED DATA OF THE GODDAMN CHARACTER
-
-Now watch
-# this
-
-
-`Sat, 11/16/2024, 08:38`
-And just like that, with about a dozen keystrokes I have a fully formatted character outline, with JSON code, for Sam Iker.
-
-It's that fucking easy.
-
-Holy.
-
-Fucking.
-
-Shit balls.
-
----
-`Sat, 11/16/2024, 10:44`
-Wow it all really works. I have a fully extensible, GPT powered system that can be easily extended with function calling through the GPT Assistants API and more. There's just...there's so much potential here.
-
-I have to now acknowledge the very real needs of my ver yphysical body...but I can finallly rest.
-
----
-
-## 🐾 Today's Pokémon
-
-
-## 🐾 **Today's Pokémon: Bouffalant (#626)**
-
-![Bouffalant Sprite](https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/626.png)
-
-- **Type(s):** normal
-- **Abilities:** reckless, sap-sipper, soundproof
-- **Stats:** hp: 95, attack: 110, defense: 95, special-attack: 40, special-defense: 95, speed: 55
-
-> "Gotta catch 'em all!" — *Pokémon Trainer*
-
-
 ---
 
 ## 🤖 GPT Thoughts
@@ -1388,7 +1113,7 @@ Here's a full character sheet for [[Sam Iker]]:
 - Collects vintage detective novels
 
 **Current Challenges**
-- Department politics for case closures
+- Department politics for faster case closures
 - Balancing work and family
 - Mentoring new partner
 - Recurring nightmares about unsolved cases
