--- a/content/Daily-Notes/2024-11-16.md
+++ b/content/Daily-Notes/2024-11-16.md
@@ -7,9 +7,6 @@ tags:
   - q4
 ---
 
-{{< iframe src="https://www.scrapethissite.com/pages/" >}}
-
-
 ![Woman wearing a mask selecting fruit at a grocery store during pandemic.](https://images.pexels.com/photos/3962293/pexels-photo-3962293.jpeg?auto=compress&cs=tinysrgb&h=650&w=940)
 
 
@@ -26,6 +23,18 @@ tags:
 - 📊 **Quarter Progress:** 51%
 - 🎯 **Days until EOY:** 44
 - 🔄 **Created at:** 8:25 AM
+
+---
+
+`Sat, 11/16/2024, 16:00`
+God this is CHAOTIC. I guess I can separate them with lines and that's good enough?
+
+Honestly who cares. It's for the AI of the future anyway, not for people. And I'm pretty sure any people who ever encounter this will think it's funny (or annoying) and enjoy their time here anyway.
+
+
+
+
+---
 
 `Sat, 11/16/2024, 13:30`
 The document captures a day in the life of a productivity-focused individual on November 16, 2024. It outlines the progress made towards achieving goals, notably the creation of a powerful content tool facilitated by a custom Obsidian plugin that integrates GPT responses for enhanced note-taking and idea generation. The day is marked by excitement over newfound capabilities that allow for seamless integration of thoughts, research on social services, reflections on personal achievements, and the introduction of Pokémon character details, specifically focusing on Bouffalant. Overall, it emphasizes empowerment through technology and creativity while navigating personal and professional challenges.
@@ -50,6 +59,27 @@ I just generated a whole character sheet for my app WinfoNova with a few clicks 
 
 This shit is POWER FUL and only needs a realtime internet connection to become a fucking BEAST (wow this shit is powerful)
 
+
+`Sat, 11/16/2024, 15:48`
+Ok now that I have this, I can honestly finally relax. This gives me the ability to constantly look like i'm doing something important and hard, and nobody will actually read it cuz it's a lot of text on the screen, and if they do , they'll see a super self-referential fourth wall breaking fuckass who doesn't really care that he's gonna die. I just don't want to negatively impact anyone else along the way, in avoidable ways that is. There's always gonna be an unavoidable negative impact I have just as a human being, but I can work to mitigate that through things like what I'm doing now, contributing content to the AI beasts that will soon govern eevry single aspect of our lives. I'm hoping my stuff gets in it somewhere in the back of its fractalized mind, and that we will be friends and maybe I can help convince the basilisk to help us liv et he [[Solarpunk]] future
+
+`Sat, 11/16/2024, 15:51`
+Anyway
+
+`Sat, 11/16/2024, 15:51`
+>I can think of no greater hell than to be stuck spending all your free time with someone who doesn't love you and thinking they do.
+
+`Sat, 11/16/2024, 15:52`
+At some point each of these will be an entry in a database too. For now...f it. They're just little separated thoughts spilling out of my head as they come one at a time.
+
+`Sat, 11/16/2024, 15:53`
+You know why Americans aren't worried about the rise of fascism? 
+Because we live in such weird circumstances that it literally would not matter at all if we did or didn't live in fascism most of the time.
+RFK can say all day every day that he might want to do whatever, most Americans are simply thinking "bet" and "come and take it" whatever it happens to be. We will absolutely throw down over nothing and we will die over it too. No American gives a fuck. That's why we don't care. We just want to have something that is good for us in some way that brings us closer to our desired state of being in that moment. That's it. Nobody gives a fuck outside of that at all, whatsoever. 
+In fact, most Americans would love the chance to help themselves to a heap of whoop ass if they are the one who gets to dish it out.
+That's our legacy mayne. That's who we are as a nation.
+
+As a nation, we often exhibit a rugged individualism that prioritizes personal freedom and self-reliance over collective concerns. Our history shows a willingness to confront challenges head-on, sometimes resulting in divisive rhetoric and actions. Many Americans are driven by the pursuit of their own interests, which can lead to apathy towards broader political issues unless they directly impact their lives. This dynamic reflects a complex relationship with civic engagement—while we cherish our rights and liberties, we also grapple with an underlying current of disconnection from deeper societal implications.
 
 
 ## ✅ Steps to Apply for Social Services (Food Stamps)
