--- a/content/Daily-Notes/2024-11-14.md
+++ b/content/Daily-Notes/2024-11-14.md
@@ -1,4 +1,9 @@
-Daily Note
+---
+title: Daily Note 2024-11-14
+---
+
+# Daily Note
+
 This is going to become something grand, I can already feel it
 I have all the skills necessary to begin this next block of work - building a robot gardener is the next goal and it is right on the horizon. I'm ready, it's time, let's fucking do this!
 
